# concave-hull

./: .gitignore  Cargo.toml  README.md  TODO.md
benches/: bench.rs  full_hull.rs  segment_intersection.rs
cli/: Cargo.toml
cli/src/: drawing.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: drawing.rs  main.rs
crates/lib/: Cargo.toml
crates/lib/examples/: basic.rs
crates/lib/src/: edge.rs  lib.rs
examples/: basic.rs
src/: concave.rs  edge.rs  lib.rs  segment_intersect.rs
test_data/: concaveman_1k.csv  polygon.csv  question_mark.csv  simple_test.csv  two_points.csv
