[package]
name = "concave_hull"
description = "A Rust implementation of the Gift Opening concave hull algorithm"
version = "0.1.0"
authors = ["Rose Peck"]
repository = "https://github.com/sixfold-origami/concave_hull"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
keywords = ["concave", "hull", "geometry"]
exclude = ["test-data", "cli"]

[workspace]
resolver = "2"
members = ["cli"]

[lib]
doctest = false

[features]
benches = []

[profile.release]
codegen-units = 1
lto = 'fat'

[dependencies]
nalgebra = "0.33.2"
parry2d = "0.21.1"

[dev-dependencies]
concave_hull = { path = ".", features = ["benches"] }
criterion = { version = "0.5", features = ["html_reports"] }
csv = "1.3.1"
geo = "0.30.0"

[[bench]]
name = "full_hull"
harness = false

[[bench]]
name = "segment_intersection"
harness = false
