[package]
name = "concave_hull"
description = "A Rust implementation of the Gift Opening concave hull algorithm"
version = "0.1.0"
authors = ["Rose Peck"]
repository = "https://github.com/sixfold-origami/concave_hull"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
keywords = ["concave", "hull", "geometry"]
exclude = ["test-data", "cli"]

[workspace]
resolver = "2"
members = ["cli"]

[lib]
doctest = false

[features]
benches = []
f32 = ["dep:parry2d"]
f64 = ["dep:parry2d-f64"]
default = ["f32"]

[profile.release]
codegen-units = 1
lto = 'fat'

[dependencies]
nalgebra = "0.33.2"
num-traits = "0.2.19"
parry2d = { version = "0.21.1", optional = true }
parry2d-f64 = { version = "0.21.1", optional = true }

[dev-dependencies]
concave_hull = { path = ".", features = ["benches"] }
criterion = { version = "0.5", features = ["html_reports"] }
csv = "1.3.1"

[[bench]]
name = "full_hull"
harness = false

[[bench]]
name = "segment_intersection"
harness = false
